<resources>
    <string name="app_name">KeyStoreEncryption</string>
    <string name="enter_text">Enter text</string>
    <string name="password">Password</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="clear">Clear</string>
    <string name="encrypted_str">Encrypted string:</string>
    <string name="decrypted_str">Decrypted string:</string>
</resources>
